<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.fakenote.ui.EditPage">
    <item
        android:id="@+id/action_rename"
        android:icon="@drawable/ic_edit"
        android:title="@string/toolbarRename"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_addPicFromCam"
        android:icon="@drawable/ic_camera"
        android:title="@string/openCamera"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_addPic"
        android:icon="@drawable/ic_image"
        android:title="@string/addPicture"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_addAudio"
        android:icon="@drawable/ic_mic"
        android:title="@string/addAudio"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_basic_collr"
        app:showAsAction="always" />
</menu>