<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="8dp" />

    <EditText
        android:id="@+id/nickname_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:hint="@string/nicknameHint"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="8dp" />

    <EditText
        android:id="@+id/mobile_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:hint="@string/mobileHint"
        android:inputType="phone"
        android:minHeight="48dp"
        android:padding="8dp" />

    <EditText
        android:id="@+id/bio_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:hint="@string/bioHint"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="8dp" />

</LinearLayout>